# latexblocks

./: .gitignore  Dockerfile.dev  LICENSE  README.md  build.mjs  dev.sh  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
frontend/css/: latexblocks.css
frontend/src/: index.ts  label-copy.ts
src/latexblocks/: __init__.py  assets.py  block_index.py  config.py  latex_processor.py  mathml.py  notation.py  page_renderer.py  ref_resolver.py  structured_math.py
src/latexblocks/assets/: default.sty  latexblocks.css  latexblocks.js  tex2mml-worker.mjs
test/: conftest.py  test_assets.py  test_cache_invalidation.py  test_config.py  test_latex_processor.py  test_mathml.py  test_notation.py  test_ref_resolver.py  test_reference_snippets.py  test_structured_math.py
